--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Azalel Nation - IN MEMORIAM</title>
+  
+<meta name="description" content="-">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="https://cdn.discordapp.com/attachments/525979135080792074/595037923309649920/android-icon-192x192.png">
+<meta name="theme-color" content="#2E2E2E">
+<meta property="og:title" content="Azalel Nation">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://azalelnation.com">
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/525979135080792074/595037923309649920/android-icon-192x192.png">
+<meta property="og:site_name" content="Azalel Nation">
+<meta property="og:description" content="">
 
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+
+</head>
+<body class="vh-100">
+  <div class="center justify-content-center text-center text-black mt-5">
+      <div class="container">
+      <h1>IN MEMORIAM AZALEL NATION - TUTUP waokokawokawkoawok :)</h1>
+      <a href="https://discord.gg/2qwrDdw">Join Discord Azalel Nation</a>
+      </div>
+      </div>
+      
+      <!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+  </body>
+</html>
