--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Azalel Nation - IN MEMORIAM</title>
   
-<meta name="description" content="-">
+<meta name="description" content="Azalel Nation sudah tutup wkkwwkwkwkw">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="https://cdn.discordapp.com/attachments/525979135080792074/595037923309649920/android-icon-192x192.png">
 <meta name="theme-color" content="#2E2E2E">
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://azalelnation.com">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/525979135080792074/595037923309649920/android-icon-192x192.png">
 <meta property="og:site_name" content="Azalel Nation">
-<meta property="og:description" content="">
+<meta property="og:description" content="Azalel Nation sudah tutup wkkwwkwkwkw">
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
