--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         
       <img class="d-flex mx-auto mb-2" src="https://cdn.discordapp.com/attachments/525979135080792074/595037923309649920/android-icon-192x192.png"/>
         
-      <h1 class="font-weight-bold display-4">Azalel Nation 5.8.2013 - 19.9.2020</h1>
+      <h1 class="font-weight-bold display-4">Azalel Nation</h1>
+        <h3>5.8.2013 - 19.9.2020</h3>
         <p class="mt-4">
         Hai teman teman Azalel Nation, kami telah memutuskan untuk berhenti beroperasi pada 19 September 2020 pada 12.00 WIB.
         <br/>
