--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <h1 class="font-weight-bold display-4">Azalel Nation</h1>
         <h3>5.8.2013 - 19.9.2020</h3>
         <p class="mt-4">
-        Hai teman teman Azalel Nation, kami telah memutuskan untuk berhenti beroperasi pada 19 September 2020 pada 12.00 WIB.
+        Hai teman teman Azalel Nation, kami telah memutuskan untuk berhenti beroperasi pada 19 September 2020 pukul 12.00 WIB.
         <br/>
-        Untuk detail lebih lanjut bisa join server discord kami. Terima kasih sudah menemani & bermain bersama kami selama 7 tahun terakhir.
+        Untuk detail lebih lanjut bisa join server discord kami. Terima kasih teman teman & para donatur yang sudah menemani & bermain bersama kami selama 7 tahun terakhir.
         </p>
         <a href="https://discord.gg/2qwrDdw" target="_blank">Join Discord Azalel Nation</a>
       </div>
